--- a/main.css
+++ b/main.css
@@ -8,14 +8,27 @@ body {
     flex-direction: column;
     margin: 0;
     height: 100vh;
-    align-items: center;
+    /* align-items: center; */
     /* justify-content: space-around; */
 }
 
 header {
     flex: 1;
-    /* display: flex;
-    flex-direction: row; */
+    align-items: center;
+    /* padding: 2em; */
+    /* background-color: rgb(235, 224, 224); */
+}
+
+.page-title {
+    color: rgb(155, 25, 25);
+    text-decoration: none;
+    justify-content: left;
+    /* align-items: center; */
+}
+
+.menu-links{
+    align-items: center;
+    justify-content: left;
 }
 
 main {
