--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ menu {
     border-radius: .25em;
     margin: .25em;
     background: rgb(233, 228, 228);
+    box-shadow: 2px 2px 2px rgb(29, 25, 25);
 }
 
 .page-title {
@@ -41,6 +42,7 @@ menu {
     text-decoration: none;
     position: absolute;
     padding-top: 1em;
+    text-shadow: 3px 3px 3px rgb(29, 25, 25);
 }
 
 main {
