--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ menu {
     margin: .25em;
     background: rgb(233, 228, 228);
     box-shadow: 2px 2px 2px rgb(29, 25, 25);
+    font-weight: bold;
 }
 
 .page-title {
