--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ header {
 }
 
 .header-color {
-    background: rgb(190, 20, 20);
+    background: rgb(12, 49, 173);
 }
 
 nav {
@@ -53,7 +53,7 @@ main {
 
 footer {
     flex: 0 40px;
-    background: rgb(190, 20, 20);
+    background: rgb(12, 49, 173);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -72,6 +72,8 @@ footer > div {
 
 .source-link {
     font-style: italic;
+    color: rgb(255, 253, 253);
+    text-decoration: none;
 }
 
 @media (max-height: 600px){
@@ -84,4 +86,9 @@ footer > div {
     main {
         flex: 1 100vh;
     }
+}
+
+.source-link:hover {
+    color: rgb(255, 253, 253);
+    text-decoration: underline;
 }
