--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ menu {
     border: thin black solid;
     border-radius: .25em;
     margin: .25em;
-    background: rgb(233, 228, 228);
+    background: rgb(255, 253, 253);
     box-shadow: 2px 2px 2px rgb(29, 25, 25);
     font-weight: bold;
 }
@@ -91,4 +91,12 @@ footer > div {
 .source-link:hover {
     color: rgb(255, 253, 253);
     text-decoration: underline;
+}
+
+.nav-item:hover {
+    background: rgb(182, 182, 182);
+}
+
+.page-title:hover {
+    color: rgb(255, 253, 253);
 }
