Login page update

--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@
 .btn {
     background-color: rgb(12, 49, 173) !important;
     color: rgb(255, 253, 253) !important;
+    margin-right: 0.5em;
 }
 
 .btn-wrapper {
