--- a/home.css
+++ b/home.css
@@ -15,7 +15,6 @@
     padding: 1em;
     border: thin black solid;
     border-radius: .5em;
-    /* background-color: rgb(50, 102, 197); */
     background-color: rgb(96, 96, 104);
 }
 
@@ -30,6 +29,11 @@ h4 {
     font-weight: bold !important;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-bottom: thin white solid;
+}
+
+.rating {
+    color: rgb(35, 21, 165); 
+    font-weight: bold;
 }
 
 .book {
@@ -65,14 +69,7 @@ h4 {
 .book-data-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     position: relative;
-}
-
-.button-alignment {
-    flex: 0;
-    position: absolute;
-    bottom: 0;
 }
 
 .quote {
@@ -100,10 +97,8 @@ h4 {
 }
 
 .average-review {
-    flex: 0 15px;
-    /* position: absolute; */
-    bottom: 0;
-    margin-bottom: .5em;
+    margin-bottom: 0;
+    margin-top: .5em;
 }
 
 .review-button:hover {
