--- a/review.css
+++ b/review.css
@@ -3,29 +3,67 @@
     display: flex;
     flex-direction: row;
     columns: 3;
-    align-items: center;
+    align-items: top;
 }
 
 .image {
     flex: 0;
 }
 
-.book-data {
-    flex: .5;
+.book-data-wrapper {
+    flex: .4;
     white-space: nowrap;
-    margin-left: 3em;
+    margin-left: 1em;
+    display: flex;
+    flex-direction: row;
+    margin-top: 0.5em;
+}
+
+.book-data {
+    /* border: thin black solid; */
+    padding: 0.5em;
+}
+
+.rating-data-wrapper {
+    flex: .4;
+    margin-left: 0.5em;
+    display: flex;
+    flex-direction: row;
 }
 
 .rating-data {
-    flex: .5;
-    margin-left: 0.5em;
+    border: thin black solid;
+    padding: 0.5em;
+    padding-bottom: 0;
+    margin-top: 0.5em;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+h4 {
+    align-self: center;
+    font-weight: bold !important;
+    border-bottom: thin black solid;
+}
+
+.rating-data > p {
+    margin-bottom: 0;
+    
+}
+
+.title {
+    justify-self: center;
+    font-weight: bold;
+    font-size: 20px;
+    /* text-decoration: underline; */
 }
 
 @media (max-width: 600px) {
     .image {
         display: none;
     }
-    .book-data {
+    .book-data-wrapper {
         margin-left: 0em;
         margin-right: 0.5em;
     }
