--- a/review.css
+++ b/review.css
@@ -44,6 +44,10 @@
     color: rgb(255, 253, 253);
 }
 
+h3 {
+    
+}
+
 h4 {
     align-self: center;
     font-weight: bold !important;
@@ -73,6 +77,10 @@ h4 {
 
 .star {
     color: rgb(243, 247, 20);
+}
+
+.summary {
+    margin-top: 1em;
 }
 
 @media (max-width: 600px) {
