Removed border on the reviews page

--- a/review.css
+++ b/review.css
@@ -123,7 +123,7 @@ h4 {
 
 .review-box {
     margin-top: 1em;
-    border: thin gray solid;
+    /* border: thin gray solid; */
     padding: 0.5em;
     border-radius: 0.25em;
     margin-bottom: 1em;
