Fixed styling for home page

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -37,7 +37,8 @@ h4 {
 }
 
 .book {
-    margin: 1em;
+    margin-left: 1em;
+    border-bottom: thin black solid;
 }
 
 .book-data {
@@ -47,6 +48,7 @@ h4 {
     display: flex;
     flex-direction: column;
     position: relative;
+    height: 7em;
 }
 
 #book-title {
@@ -90,6 +92,13 @@ h4 {
     border-radius: 0.25em;
     background-color: rgb(96, 96, 104);
     color: rgb(255, 253, 253);
+    box-sizing: content-box;
+}
+
+.button-wrapper {
+    height: 5em;
+    position: absolute;
+    bottom: 3em;
 }
 
 .disabled {
