--- a/src/reviews/review.css
+++ b/src/reviews/review.css
@@ -21,7 +21,7 @@
     margin-top: 0.5em;
 }
 
-.book-data {
+.book-data-review {
     padding: 0.5em;
 }
 
@@ -70,8 +70,9 @@ h4 {
     margin-top: 0.5em;
 }
 
-.rating {
+.rating-reviews {
     font-weight: bold;
+    color: rgb(255, 253, 253);
 }
 
 .star {
