Updated review score input

--- a/src/reviews/review.css
+++ b/src/reviews/review.css
@@ -124,7 +124,9 @@
 }
 
 .rating-select {
-    margin-right: 1em;
+    margin-right: 0.2em;
+    width: 1.5em;
+    height: 1.5em;
 }
 
 .review-box {
