Added the call to an outside api to generate qutoes

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
+    width: 75vh;
+    justify-self: center;
 }
 
 .quote-of-the-day {
